k8s/base/01-foo-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: <UPDATE_ME>
