k8s/base/02-foo-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: foo-app-namespace
  name: foo-app-deployment
  labels:
    app: foo-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
        - name: foo-app
          image: <UPDATE_ME>
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
      imagePullSecrets:
          - name: aws-ecr-credential
