k8s/base/02-foo-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: foo-app-service
spec:
  type: NodePort
  selector:
    app: foo-app
  ports:
    - port: 3000
      targetPort: 3000
