k8s/base/03-foo-app-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: foo-app-namespace
  name: foo-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: foo-app
