k8s/base/00-foo-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: foo-app-service
              servicePort: 3000
