k8s/base/01-foo-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    namespace: foo-app-namespace
    name: foo-app
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo-app-service
                port:
                  number: 80
